--- a/new.html
+++ b/new.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title> KIRTI MY LOVE </title>
     <link rel="stylesheet" href="new.css" />
   </head>
   <body>
     <div class="wrap">
-      <h1>For You 💖</h1>
+      <h1>For You Babyi Girl 💖</h1>
       <div class="postcard1"></div>
       <div class="postcard">
         <div class="letter"></div>
@@ -32,7 +32,7 @@
         </p>
         <div class="address">
           <img
-            src="https://i.postimg.cc/9Xq7XyF2/Untold-Coding.png"
+            src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fhips.hearstapps.com%2Fhmg-prod%2Fimages%2Fpink-heart-emoji-vector-illustration-royalty-free-illustration-1698694801.jpg&tbnid=Xf46qO4Ba0vjHM&vet=12ahUKEwiN6oP_3pmEAxWDhWMGHf1ADCYQMygBegUIARDRAQ..i&imgrefurl=https%3A%2F%2Fwww.womenshealthmag.com%2Fsex-and-love%2Fg35382506%2Fheart-emojis-meaning%2F&docid=H6ci7OSIhdldGM&w=7071&h=7071&itg=1&q=heart%20emoji&hl=en-GB&ved=2ahUKEwiN6oP_3pmEAxWDhWMGHf1ADCYQMygBegUIARDRAQ"
             class="mail_stamp"
           />
         </div>
